# tesla-mcp-server

./: .env  .gitignore  README.md  claude_config.json  claude_tesla.py  main.py  mcp.py  pyproject.toml  requirements.txt  setup.py  test_api.py
scripts/: encrypt_creds.py
src/tesla_mcp_server/: __init__.py  __main__.py  auth.py  cli.py  config.py  encryption.py  mcp.py  server.py
src/tesla_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_server.py
